creditas-sf/force-app/main/default/objects/Product2/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <description>Valor do Produto</description>
    <label>Valor do produto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>