creditas-sf/force-app/main/default/objects/Product2/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Marca do Produto (Ex.: Hyundai)</description>
    <label>Marca</label>
    <length>100</length>
    <type>Text</type>
</CustomField>