creditas-sf/force-app/main/default/objects/Product2/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>Loja onde o Veículo / Produto está localizado (Ex.: SP - Shopping Jardim Sul)

Observação: No sistema de origem, Loja = Cav</description>
    <label>Loja [estoque]</label>
    <length>100</length>
    <type>Text</type>
</CustomField>