creditas-sf/force-app/main/default/objects/Product2/fields/StockVehicleStatus__c.field-meta.xml
<CustomField>
    <fullName>StockVehicleStatus__c</fullName>
    <description>Status do Veículo / Produto no Estoque</description>
    <label>Status do carro no Estoque</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disponível (carro em estoque)</fullName>
            </value>
            <value>
                <fullName>Pré-venda</fullName>
            </value>
            <value>
                <fullName>Reservado</fullName>
            </value>
            <value>
                <fullName>Intermediação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>