creditas-sf/force-app/main/default/objects/Product2/recordTypes/AutoSales.recordType-meta.xml
<RecordType>
    <fullName>AutoSales</fullName>
    <active>true</active>
    <description>Tipo de Registro do Produto: Auto - Vendas</description>
    <label>Auto - Vendas</label>
</RecordType>